--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "connect-flash": "^0.1.1",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.7",
+    "node-fetch": "^3.2.6",
     "nodemon": "^2.0.13",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "request": "^2.88.2",
     "stripe": "^9.9.0"
   }
 }
